--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
 body{
 	background-color: teal;
 }
+
+.cool{
+	visibility: hidden;
+	width: 100px;
+	height: 200px;
+	background-color: green;
+	transition: background-color 2s;
+}
+
+.cool.red{
+	visibility: visible;
+	background-color: red;
+}
