--- a/css/rocket.css
+++ b/css/rocket.css
@@ -1,3 +1,6 @@
+body{
+	font-family:'hevitica', 'arial', sans-serif;
+}
 .left{
 	background-color: aquamarine;
 	position: fixed;
@@ -7,6 +10,27 @@
 	left: 0;
 	
 }
+
+.interface{
+	text-align: center;
+	padding: 20px;
+}
+
+a.button{
+	display: inline-block;
+	background-color: white;
+	color: black;
+	padding:20px 40px; 
+	border-radius:10px;
+	text-transform: uppercase;
+	text-decoration: none;
+	transition: color 300ms;
+}
+
+a:hover{
+	color: red;
+}
+
 .right{
 	background-color: aliceblue;
 	position: fixed;
@@ -17,7 +41,7 @@
 }
 
 .ground{
-	background-color: green;
+	background: url('../img/ground.png') no-repeat center 0;
 	position: absolute;
 	bottom: 0;
 	left: 0;
@@ -25,10 +49,39 @@
 	height:20px;
 }
 
+.nervous{
+	position: absolute;
+	bottom: 220px;
+	left: 30%;
+	background: url('../img/nervous.png') no-repeat 0 0;
+	width: 223px;
+	height: 100px;
+	display: none;
+
+}
+
+.nervous.show{
+	display: block;
+}
+
+.cant-wait{
+	position: absolute;
+	bottom: 220px;
+	left: 60%;
+	background: url('../img/cant-wait.png') no-repeat 0 0;
+	width: 206px;
+	height: 65px;
+	display: none;
+}
+
+.cant-wait.show{
+	display: block;
+}
+
 .rocket{
 	position: absolute;
 	left: 50%;
-	bottom: -13px;
+	bottom: -20px;
 	width: 143px;
 	height: 272px;
 	margin-left: -71.2;
@@ -54,7 +107,12 @@ body.body-state1 .rocket{
 	transition: none;
 }
 
-body.body-state3 .rocket{
+body.body-state1 .rocket{
+	transition: none;
+}
+     
+body.body-state3 .rocket,
+body.body-state4 .rocket{
 	bottom: 1000px;
 }
 
